test/files/pos/t12133/I.java
package pkg;

@UniqueConstraint(columnNames = {"account_id_ok", "name"})
public class I {}
