test/files/neg/t12799/C.java

package example;

@Deprecated(since="you like it")
public class C {

    @Deprecated(since="beginning")
    public static int answer() {
        return 42;
    }
}
